DOC-2236: Fix assorted issues

--- a/_new_content_templates/blank_releasenotes.adoc
+++ b/_new_content_templates/blank_releasenotes.adoc
@@ -30,14 +30,14 @@ The following "list" should be added to `data/nav.yml`
 * <<newfeatures,New features>>
 * <<enhancements,Enhancements>>
 * <<functionalitychanges,Functionality changes>>
-* <<accompanyingpremiumpluginchanges,Accompanying Premium Plugin changes>>
+* <<accompanying-premium-self-hosted-server-side-component-changes,Accompanying Premium Plugin changes>>
 * <<accompanyingpremiumskinsandiconpackschanges,Accompanying Premium Skins and Icon Packs changes>>
-* <<accompanyingpremiumself-hostedserver-sidecomponentchanges,Accompanying Premium self-hosted server-side component changes>>
-* <<generalbugfixes,General bug fixes>>
-* <<securityfixes,Security fixes>>
+* <<accompanying-premium-self-hosted-server-side-component-changes,Accompanying Premium self-hosted server-side component changes>>
+* <<general-bug-fixes,General bug fixes>>
+* <<security-fixes,Security fixes>>
 * <<deprecatedfeatures,Deprecated features>>
 * <<knownissues,Known issues>>
-* <<upgradingtothelatestversionoftinymce5,Upgrading to the latest version of TinyMCE 5>>
+* <<upgrading-to-the-latest-version-of-tinymce-5,Upgrading to the latest version of TinyMCE 5>>
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
@@ -115,7 +115,7 @@ Add description here.
 
 For information on using premium skins and icon packs, see: link:{baseurl}/enterprise/premium-skins-and-icon-packs/[Premium Skins and Icon Packs].
 
-[[accompanyingpremiumself-hostedserver-sidecomponentchanges]]
+[[accompanying-premium-self-hosted-server-side-component-changes]]
 == Accompanying Premium self-hosted server-side component changes
 
 The {productname} vnumtxt release includes accompanying changes affecting the {productname} *self-hosted* services for the following plugins:
