--- a/modules/ROOT/pages/plugins/premium/rtc.adoc
+++ b/modules/ROOT/pages/plugins/premium/rtc.adoc
@@ -10,4 +10,4 @@ include::partial$misc/premiumplugin.adoc[]
 
 include::partial$rtc/rtc-description.adoc[]
 
-For information on the Real-time Collaboration plugin, see xref:rtc/index.adoc[Real-time Collaboration (RTC)].
+For information on the Real-time Collaboration plugin, see xref:rtc.adoc[Real-time Collaboration (RTC)].
