--- a/modules/ROOT/pages/release-notes/release-notes5105.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes5105.adoc
@@ -7,12 +7,12 @@
 
 {productname} 5.10.5 was released for {enterpriseversion} and {cloudname} on Wednesday, June 1^st^, 2022. It includes {productname} 5.10.5. These release notes provide an overview of the changes for {productname} 5.10.5, including:
 
-* xref:generalbugfixes[General bug fixes]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:general-bug-fixes[General bug fixes]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.10.5 provides fixes for the following bugs:
