--- a/modules/ROOT/pages/release-notes/release-notes515.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes515.adoc
@@ -7,11 +7,11 @@
 
 {productname} 5.1.5 was released for {enterpriseversion} and {cloudname} on Wednesday, January 15^th^, 2020. These release notes provide an overview of the changes for {productname} 5.1.5, including:
 
-* xref:generalbugfixes[General bug fixes]
+* xref:general-bug-fixes[General bug fixes]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.1.5 provides fixes for the following bugs:
