--- a/modules/ROOT/pages/release-notes/release-notes562.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes562.adoc
@@ -8,8 +8,8 @@
 {productname} 5.6.2 was released for {enterpriseversion} and {cloudname} on Wednesday, December 9^th^, 2020. It includes {productname} 5.6.2 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.6.2, including:
 
 * xref:accompanyingpremiumchanges[Accompanying Premium changes]
-* xref:generalbugfixes[General bug fixes]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:general-bug-fixes[General bug fixes]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
@@ -28,7 +28,7 @@ The *Enterprise language packs* include the following bug fix:
 
 For information on the Enterprise language packs, see: xref:configure/localization.adoc#language[Localization options - `language`].
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.6.2 provides fixes for the following bugs:
