--- a/modules/ROOT/pages/release-notes/release-notes582.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes582.adoc
@@ -7,13 +7,13 @@
 
 {productname} 5.8.2 was released for {enterpriseversion} and {cloudname} on Wednesday, June 30^th^, 2021. It includes {productname} 5.8.2 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.8.2, including:
 
-* xref:accompanyingpremiumpluginchanges[Accompanying Premium Plugin changes]
-* xref:generalbugfixes[General bug fixes]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:general-bug-fixes[General bug fixes]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[accompanyingpremiumpluginchanges]]
+[[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
 
 The following premium plugin updates were released alongside {productname} 5.8.2.
@@ -50,7 +50,7 @@ The {productname} 5.8.2 release includes an accompanying release of the *Spell C
 
 For information on the Spell Checker Pro plugin, see: xref:plugins/premium/tinymcespellchecker.adoc[Spell Checker Pro plugin].
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.8.2 provides fixes for the following bugs:
