--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -273,7 +273,7 @@
 ** xref:integrations/wordpress.adoc[WordPress]
 * xref:migration-from-4x.adoc[Migrating from TinyMCE 4]
 * xref:migration-from-froala.adoc[Migrating from Froala]
-* Release notes for TinyMCE 5
+* xref:release-notes/index.adoc[Release notes for TinyMCE 5]
 ** xref:release-notes/6.0-upcoming-changes.adoc[Upcoming changes for TinyMCE 6]
 ** xref:release-notes/release-notes5109.adoc[TinyMCE 5.10.9]
 ** xref:release-notes/release-notes5108.adoc[TinyMCE 5.10.8]
