--- a/modules/ROOT/pages/release-notes/release-notes510.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes510.adoc
@@ -7,19 +7,19 @@
 
 {productname} 5.10 was released for {enterpriseversion} and {cloudname} on Wednesday, October 20^th^, 2021. It includes {productname} 5.10 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.10, including:
 
-* xref:newfeatures[New features]
+* xref:new-features[New features]
 * xref:enhancements[Enhancements]
-* xref:functionalitychanges[Functionality changes]
-* xref:accompanyingpremiumpluginchanges[Accompanying Premium Plugin changes]
-* xref:accompanyingpremiumself-hostedserver-sidecomponentchanges[Accompanying Premium self-hosted server-side component changes]
-* xref:generalbugfixes[General bug fixes]
-* xref:securityfixes[Security fixes]
-* xref:deprecatedfeatures[Deprecated features]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:functionality-changes[Functionality changes]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
+* xref:general-bug-fixes[General bug fixes]
+* xref:security-fixes[Security fixes]
+* xref:deprecated-features[Deprecated features]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[newfeatures]]
+[[new-features]]
 == New features
 
 {productname} 5.10 introduces the following minor new features:
@@ -35,7 +35,7 @@ include::partial$misc/releasenotes_for_stable.adoc[]
 
 * The `element` argument of the `editor.selection.scrollIntoView()` API is now optional, and if it is not provided the current selection will be scrolled into view.
 
-[[functionalitychanges]]
+[[functionality-changes]]
 == Functionality changes
 
 The following functionality changes were made for the {productname} 5.10 release:
@@ -43,7 +43,7 @@ The following functionality changes were made for the {productname} 5.10 release
 * The deprecated `scope` attribute is no longer added to `td` cells when converting a row to a header row.
 * The number of `col` elements is normalized to match the number of columns in a table after a table action.
 
-[[accompanyingpremiumpluginchanges]]
+[[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
 
 The following premium plugin updates were released alongside {productname} 5.10.
@@ -87,7 +87,7 @@ The {productname} 5.10 release includes an accompanying release of the *RTC* pre
 * Clear Formatting did not work on collapsed selections.
 * Disconnect was not clean if the page unloaded without removing the editor.
 
-For information on the RTC plugin, see: xref:rtc/index.adoc[RTC plugin].
+For information on the RTC plugin, see: xref:plugins/premium/rtc.adoc[RTC plugin].
 
 === Spell Checker Pro 2.5.0
 
@@ -103,7 +103,7 @@ The {productname} 5.10 release includes an accompanying release of the *Spell Ch
 
 For information on the Spell Checker Pro plugin, see: xref:plugins/premium/tinymcespellchecker.adoc[Spell Checker Pro plugin].
 
-[[accompanyingpremiumself-hostedserver-sidecomponentchanges]]
+[[accompanying-premium-self-hosted-server-side-component-changes]]
 == Accompanying Premium self-hosted server-side component changes
 
 The {productname} 5.10 release includes accompanying changes affecting the {productname} *self-hosted* services for the following plugins:
@@ -160,7 +160,7 @@ For information on:
 * Deploying the server-side components, see: xref:enterprise/server/index.adoc[Server-side component installation].
 * Deploying the server-side components using Docker, see: xref:enterprise/server/dockerservices.adoc[Containerized service deployments].
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.10 provides fixes for the following bugs:
@@ -188,14 +188,14 @@ For information on:
 * `video` and `audio` elements were unable to be played when the `media` plugin live embeds were enabled in some cases.
 * Pasting images would throw an exception if the clipboard `items` were not files (for example, screenshots taken from gnome-software). Patch contributed by cedric-anne.
 
-[[securityfixes]]
+[[security-fixes]]
 == Security fixes
 
 {productname} 5.10 provides fixes for the following security issues.
 
 Fixed URLs not cleaned correctly in some cases in the `link` and `image` plugins. This caused a medium severity Cross Site Scripting (XSS) vulnerability. Tiny Technologies would like to thank Yakir6 for discovering this vulnerability.
 
-[[deprecatedfeatures]]
+[[deprecated-features]]
 == Deprecated features
 
 For a full list of the features deprecated since the release of {productname} 5.0, see: xref:release-notes/6.0-upcoming-changes.adoc[List of upcoming changes for {productname} 6].
