--- a/modules/ROOT/pages/release-notes/release-notes5101.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes5101.adoc
@@ -7,15 +7,15 @@
 
 {productname} 5.10.1 was released for {enterpriseversion} and {cloudname} on Wednesday, November 10^th^, 2021. It includes {productname} 5.10.1 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.10.1, including:
 
-* xref:accompanyingpremiumpluginchanges[Accompanying Premium Plugin changes]
-* xref:accompanyingpremiumself-hostedserver-sidecomponentchanges[Accompanying Premium self-hosted server-side component changes]
-* xref:generalbugfixes[General bug fixes]
-* xref:securityfixes[Security fixes]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
+* xref:general-bug-fixes[General bug fixes]
+* xref:security-fixes[Security fixes]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[accompanyingpremiumpluginchanges]]
+[[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
 
 The following premium plugin updates were released alongside {productname} 5.10.1.
@@ -36,7 +36,7 @@ The {productname} 5.10.1 release includes an accompanying release of the *PowerP
 
 For information on the PowerPaste plugin, see: xref:plugins/premium/powerpaste.adoc[PowerPaste plugin].
 
-[[accompanyingpremiumself-hostedserver-sidecomponentchanges]]
+[[accompanying-premium-self-hosted-server-side-component-changes]]
 == Accompanying Premium self-hosted server-side component changes
 
 The {productname} 5.10.1 release includes accompanying changes affecting the {productname} *self-hosted* services for the following plugins:
@@ -92,7 +92,7 @@ For information on:
 * Deploying the server-side components, see: xref:enterprise/server/index.adoc[Server-side component installation].
 * Deploying the server-side components using Docker, see: xref:enterprise/server/dockerservices.adoc[Containerized service deployments].
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.10.1 provides fixes for the following bugs:
@@ -108,7 +108,7 @@ For information on:
 * The insert table grid menu displayed an incorrect size when re-opening the grid.
 * The word count plugin was treating the zero width space character (`+&#8203;+`) as a word.
 
-[[securityfixes]]
+[[security-fixes]]
 == Security fixes
 
 {productname} 5.10.1 provides fixes for the following security issues:
@@ -119,7 +119,7 @@ IMPORTANT: During further scans, some vulnerable dependencies were missed in thi
 All 3 server-side components have been updated to include dependency updates addressing security issues. This includes _High_ severity vulnerability fixes.
 
 [.line-through]
-For information on the server-side components updates, see: xref:accompanyingpremiumself-hostedserver-sidecomponentchanges[Accompanying Premium self-hosted server-side component changes].
+For information on the server-side components updates, see: xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes].
 
 :enterprise: true
 
