--- a/modules/ROOT/pages/release-notes/release-notes521.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes521.adoc
@@ -7,13 +7,13 @@
 
 {productname} 5.2.1 was released for {enterpriseversion} and {cloudname} on Monday, April 6^th^, 2020.  It includes {productname} 5.2.1 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.2.1, including:
 
-* xref:generalbugfixes[General bug fixes]
-* xref:accompanyingpremiumpluginchanges[Accompanying Premium Plugin changes]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:general-bug-fixes[General bug fixes]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.2.1 provides fixes for the following bugs:
@@ -37,7 +37,7 @@ include::partial$misc/releasenotes_for_stable.adoc[]
 * Fixed an issue where removing the background color of text did not always work.
 * Fixed an issue where new rows and columns in a table did not retain the style of the previous row or column.
 
-[[accompanyingpremiumpluginchanges]]
+[[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
 
 The following premium plugins updates were released alongside {productname} 5.2.1.
