--- a/modules/ROOT/pages/release-notes/release-notes522.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes522.adoc
@@ -7,14 +7,14 @@
 
 {productname} 5.2.2 was released for {enterpriseversion} and {cloudname} on Thursday, April 30^th^, 2020.  It includes {productname} 5.2.2 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.2.2, including:
 
-* xref:generalbugfixes[General bug fixes]
-* xref:securityfixes[Security fixes]
-* xref:accompanyingpremiumpluginchanges[Accompanying Premium Plugin changes]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:general-bug-fixes[General bug fixes]
+* xref:security-fixes[Security fixes]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.2.2 provides fixes for the following bugs:
@@ -24,14 +24,14 @@ include::partial$misc/releasenotes_for_stable.adoc[]
 * Fixed `format` menu alignment buttons inconsistently applying to images.
 * Fixed the floating toolbar drawer height collapsing when the editor is rendered in modal dialogs or floating containers.
 
-[[securityfixes]]
+[[security-fixes]]
 == Security fixes
 
 {productname} 5.2.2 provides fixes for the following security issues:
 
 * Fixed `media` embed content not processing safely in some cases.
 
-[[accompanyingpremiumpluginchanges]]
+[[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
 
 The following premium plugins updates were released alongside {productname} 5.2.2.
