--- a/modules/ROOT/pages/release-notes/release-notes53.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes53.adoc
@@ -8,13 +8,13 @@
 {productname} 5.3 was released for {enterpriseversion} and {cloudname} on Thursday, June 11^th^, 2020. It includes {productname} 5.3.2 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.3, including:
 
 * xref:tinymce53newfeaturesandenhancements[TinyMCE 5.3 new features and enhancements]
-* xref:accompanyingpremiumpluginchanges[Accompanying Premium Plugin changes]
-* xref:accompanyingpremiumself-hostedserver-sidecomponentchanges[Accompanying premium self-hosted server-side component changes]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying premium self-hosted server-side component changes]
 * xref:minorchangesfortinymce53[Minor changes for TinyMCE 5.3]
-* xref:generalbugfixes[General bug fixes]
+* xref:general-bug-fixes[General bug fixes]
 * xref:deprecatedfeatures[Deprecated features]
 * xref:knownissues[Known issues]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
@@ -77,7 +77,7 @@ A Greek (`el`) language pack is now provided for the {productname} user interfac
 
 For information on using the language setting and a list of supported languages for {cloudname} and premium self-hosted deployments, see: xref:configure/localization.adoc#language[Localization options - language].
 
-[[accompanyingpremiumpluginchanges]]
+[[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
 
 The following premium plugin updates were released alongside {productname} 5.3.
@@ -102,15 +102,15 @@ For a list of Comments plugin menu items, see: xref:plugins/premium/comments/com
 
 === Enhanced Media Embed
 
-The {productname} 5.3 release includes accompanying changes affecting the {productname} *self-hosted* *Enhanced Media Embed* service. {cloudname} users are unaffected. For details, see: xref:accompanyingpremiumself-hostedserver-sidecomponentchanges[Accompanying premium self-hosted server-side component changes].
+The {productname} 5.3 release includes accompanying changes affecting the {productname} *self-hosted* *Enhanced Media Embed* service. {cloudname} users are unaffected. For details, see: xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying premium self-hosted server-side component changes].
 
 === Image Tools Proxy
 
-The {productname} 5.3 release includes accompanying changes affecting the {productname} *self-hosted* *Image Tools Proxy* service. {cloudname} users are unaffected. For details, see: xref:accompanyingpremiumself-hostedserver-sidecomponentchanges[Accompanying premium self-hosted server-side component changes].
+The {productname} 5.3 release includes accompanying changes affecting the {productname} *self-hosted* *Image Tools Proxy* service. {cloudname} users are unaffected. For details, see: xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying premium self-hosted server-side component changes].
 
 === Link Checker
 
-The {productname} 5.3 release includes accompanying changes affecting the {productname} *self-hosted* *Link Checker* service. {cloudname} users are unaffected. For details, see: xref:accompanyingpremiumself-hostedserver-sidecomponentchanges[Accompanying premium self-hosted server-side component changes].
+The {productname} 5.3 release includes accompanying changes affecting the {productname} *self-hosted* *Link Checker* service. {cloudname} users are unaffected. For details, see: xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying premium self-hosted server-side component changes].
 
 === PowerPaste 5.3.0
 
@@ -136,11 +136,11 @@ The {productname} 5.3 release includes an accompanying release of the *Spell Che
 * Missing `spell-check` icons on Spell Checker Pro menu items.
 * Spellchecking incorrectly moving the editor selection into non-editable elements.
 
-The {productname} *self-hosted* *Spell Checker Pro* service has also been updated. {cloudname} users are unaffected. For details, see: xref:accompanyingpremiumself-hostedserver-sidecomponentchanges[Accompanying premium self-hosted server-side component changes].
+The {productname} *self-hosted* *Spell Checker Pro* service has also been updated. {cloudname} users are unaffected. For details, see: xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying premium self-hosted server-side component changes].
 
 For information on Spell Checker Pro plugin, see: xref:plugins/premium/tinymcespellchecker.adoc[Spell Checker Pro plugin].
 
-[[accompanyingpremiumself-hostedserver-sidecomponentchanges]]
+[[accompanying-premium-self-hosted-server-side-component-changes]]
 == Accompanying premium self-hosted server-side component changes
 
 The {productname} 5.3 release includes accompanying changes affecting the {productname} *self-hosted* services for the following plugins:
@@ -214,7 +214,7 @@ For information on configuring the Link Checker service, see: xref:enterprise/se
 * Changed context toolbars so they concatenate when more than one is suitable for the current selection.
 * Changed inline style element formats (strong, b, em, i, u, strike) to convert to a span on format removal if a `style` or `class` attribute is present.
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.3 provides fixes for the following bugs:
