--- a/modules/ROOT/pages/release-notes/release-notes542.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes542.adoc
@@ -7,13 +7,13 @@
 
 {productname} 5.4.2 was released for {enterpriseversion} and {cloudname} on Wednesday, August 26^th^, 2020.  It includes {productname} 5.4.2 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.4.2, including:
 
-* xref:generalbugfixes[General bug fixes]
-* xref:accompanyingpremiumpluginchanges[Accompanying Premium Plugin changes]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:general-bug-fixes[General bug fixes]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.4.2 provides fixes for the following bugs:
@@ -32,7 +32,7 @@ include::partial$misc/releasenotes_for_stable.adoc[]
 * Fixed the list type style not retained when copying list items.
 * Fixed the Paste plugin converting tabs in plain text to a single space character. A xref:plugins/opensource/paste.adoc#paste_tab_spaces[`paste_tab_spaces`] option has been included for setting the number of spaces used to replace a tab character.
 
-[[accompanyingpremiumpluginchanges]]
+[[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
 
 The following premium plugins updates were released alongside {productname} 5.4.2.
