--- a/modules/ROOT/pages/release-notes/release-notes571.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes571.adoc
@@ -7,14 +7,14 @@
 
 {productname} 5.7.1 was released for {enterpriseversion} and {cloudname} on Wednesday, March 24^th^, 2021. It includes {productname} 5.7.1 and additional changes to premium plugins. These release notes provide an overview of the changes for {productname} 5.7.1, including:
 
-* xref:accompanyingpremiumpluginchanges[Accompanying Premium Plugin changes]
-* xref:generalbugfixes[General bug fixes]
-* xref:securityfixes[Security fixes]
-* xref:upgradingtothelatestversionoftinymce5[Upgrading to the latest version of TinyMCE 5]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:general-bug-fixes[General bug fixes]
+* xref:security-fixes[Security fixes]
+* xref:upgrading-to-the-latest-version-of-tinymce-5[Upgrading to the latest version of TinyMCE 5]
 
 include::partial$misc/releasenotes_for_stable.adoc[]
 
-[[accompanyingpremiumpluginchanges]]
+[[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
 
 The following premium plugin updates were released alongside {productname} 5.7.1.
@@ -29,7 +29,7 @@ The {productname} 5.7.1 release includes an accompanying release of the *PowerPa
 
 For information on the PowerPaste plugin, see: xref:plugins/premium/powerpaste.adoc[PowerPaste plugin].
 
-[[generalbugfixes]]
+[[general-bug-fixes]]
 == General bug fixes
 
 {productname} 5.7.1 provides fixes for the following bugs:
@@ -40,7 +40,7 @@ For information on the PowerPaste plugin, see: xref:plugins/premium/powerpaste.a
 * Fixed context menu items lacking support for the `disabled` and `shortcut` properties.
 * Fixed a regression where the width and height were incorrectly set when embedding content using the `media` dialog.
 
-[[securityfixes]]
+[[security-fixes]]
 == Security fixes
 
 {productname} 5.7.1 provides fixes for the following security issues.
