--- a/modules/ROOT/partials/misc/plugin-menu-item-id-boilerplate.adoc
+++ b/modules/ROOT/partials/misc/plugin-menu-item-id-boilerplate.adoc
@@ -11,7 +11,14 @@ ifndef::altplugincode[]
 include::partial$menu-item-ids/{plugincode}-menu-items.adoc[]
 endif::[]
 
+ifeval::["{plugincode}" == "comments"]
+For information on the {pluginname} plugin, see: xref:plugins/{plugincategory}/{plugincode}/introduction_to_tiny_comments.adoc[Plugins - The {pluginname} plugin]
+endif::[]
+
+ifeval::["{plugincode}" != "comments"]
 For information on the {pluginname} plugin, see: xref:plugins/{plugincategory}/{plugincode}.adoc[Plugins - The {pluginname} plugin]
+endif::[]
+
 endif::[]
 ifeval::["{docname}" != "advanced/available-menu-items"]
 [[menuitems]]
