--- a/modules/ROOT/partials/misc/plugin-toolbar-button-id-boilerplate.adoc
+++ b/modules/ROOT/partials/misc/plugin-toolbar-button-id-boilerplate.adoc
@@ -11,7 +11,14 @@ ifndef::altplugincode[]
 include::partial$toolbar-button-ids/{plugincode}-toolbar-buttons.adoc[]
 endif::[]
 
+ifeval::["{plugincode}" == "comments"]
+For information on the {pluginname} plugin, see: xref:plugins/{plugincategory}/{plugincode}/introduction_to_tiny_comments.adoc[Plugins - The {pluginname} plugin]
+endif::[]
+
+ifeval::["{plugincode}" != "comments"]
 For information on the {pluginname} plugin, see: xref:plugins/{plugincategory}/{plugincode}.adoc[Plugins - The {pluginname} plugin]
+endif::[]
+
 endif::[]
 ifeval::["{docname}" != "advanced/available-toolbar-buttons"]
 [[toolbarbuttons]]
